--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -2,7 +2,13 @@
     min-width: 100vh;
 }
 .logo-left-corner {
-    position: fixed;
-    top: 10px;
-    left: 10px;
+    display: none;
+}
+@media (min-width: 550px){
+    .logo-left-corner {
+        display: block;
+        position: fixed;
+        top: 10px;
+        left: 10px;
+    }
 }
