horizontal rules 4lyfe

--- a/assets/css/skeleton/skeleton.css
+++ b/assets/css/skeleton/skeleton.css
@@ -275,7 +275,7 @@ label,
 legend {
   display: block;
   margin-bottom: .5rem;
-  font-weight: 600; }
+  font-weight: 400; } /* Was 600 */
 fieldset {
   padding: 0;
   border-width: 0; }
