--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -36,3 +36,11 @@
 .spacer-small {
     margin-bottom: 10em;
 }
+
+.encircled {
+    border: solid black 2px;
+    border-radius: 50%;
+    padding-left: 1.8rem;
+    padding-right: 1.8rem;
+    text-align: center;
+}
